# rustwebapp

./: .env  .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
.sqlx/: query-3518ead086e0dc832e04ac222062524865c384d29e77bffa99d7bcfff4a8decd.json  query-4f6620b6771db66369c95e2850664fed20dcbcc9ff65e6a50d144c1a4c1f5961.json  query-94e039a0ddf5a9811a1adf085e0a2dd4e9b4ea45e6571274369e0b4d1da8a0a0.json  query-f66fcfa364c261885dc4da0fbbd02d7c3b0f0dfa595f8cdf7caca5ddb8ad9b08.json
app/: Cargo.toml
app/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
style/: main.css
