[workspace]
members = ["app", "server", "shared"]
resolver = "2"

# cargo-leptos 0.3 workspace multi-package config (double brackets = array)
[[workspace.metadata.leptos]]
name         = "rustwebapp"
bin-package  = "server"
lib-package  = "app"

output-name  = "rustwebapp"
site-root    = "target/site"
site-pkg-dir = "pkg"
style-file   = "style/main.css"
site-addr    = "127.0.0.1:3000"
reload-port  = 3001

bin-features = ["ssr"]
lib-features = ["hydrate"]

[workspace.dependencies]
leptos       = { version = "0.7", features = [] }
leptos_axum  = { version = "0.7" }
axum         = { version = "0.7" }
tokio        = { version = "1", features = ["full"] }
serde        = { version = "1", features = ["derive"] }
wasm-bindgen = "0.2"
