[package]
name    = "app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
hydrate = ["leptos/hydrate"]
ssr     = ["leptos/ssr", "dep:leptos_axum"]

[dependencies]
shared       = { path = "../shared" }
leptos       = { workspace = true }
leptos_router = { version = "0.7" }
serde        = { workspace = true }
wasm-bindgen = { workspace = true }
leptos_axum  = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = { version = "0.6", features = ["http"] }
js-sys   = { version = "0.3" }
web-sys  = { version = "0.3", features = ["Window", "Storage"] }
